--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,13 +5,45 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocalPasswordManager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <StackPanel>
-        <StackPanel Orientation="Horizontal">
-            <TextBox>Hello World</TextBox>
+        Title="Unnamed Password Manager" Height="450" Width="800"
+        Background="#343434"
+        ResizeMode="CanMinimize">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="0.5*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="1.3*"/>
+            <RowDefinition Height=".7*"/>
+            <RowDefinition Height="2*"/>
+        </Grid.RowDefinitions>
 
-            <Button>Enter</Button>
-        </StackPanel>
-        <Label>Greetings</Label>
-    </StackPanel>
+        <Label Content="Master Password" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Foreground="White" FontSize="40" VerticalAlignment="Center" HorizontalAlignment="Center"></Label>
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="5" TextWrapping="NoWrap" FontSize="30"></TextBox>
+        <Button Content="Enter" Grid.Row="2" Grid.Column="2" FontSize="20" Margin="5" Foreground="White" FontWeight="Bold">
+            <Button.Style>
+                <Style TargetType="{x:Type Button}">
+                    <Setter Property="Background" Value="#11d543"/>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type Button}">
+                                <Border Background="{TemplateBinding Background}">
+                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#11b543"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+    </Grid>
 </Window>
