--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -24,7 +24,7 @@
 
         <Label Content="Master Password" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Foreground="White" FontSize="40" VerticalAlignment="Center" HorizontalAlignment="Center"></Label>
         <TextBox Grid.Row="2" Grid.Column="1" Margin="5" TextWrapping="NoWrap" FontSize="30"></TextBox>
-        <Button Content="Enter" Grid.Row="2" Grid.Column="2" FontSize="20" Margin="5" Foreground="White" FontWeight="Bold">
+        <Button Content="Enter" Grid.Row="2" Grid.Column="2" FontSize="20" Margin="5,5,5,0" Foreground="White" FontWeight="Bold" Height="40" VerticalAlignment="Top" Click="Button_Click">
             <Button.Style>
                 <Style TargetType="{x:Type Button}">
                     <Setter Property="Background" Value="#11d543"/>
