Got the UI to automatically add rows for passwords

--- a/PasswordBrowser.xaml
+++ b/PasswordBrowser.xaml
@@ -8,7 +8,7 @@
         Title="Unnamed Password Manager - Browser" Height="450" Width="800"
         Background="#343434"
         ResizeMode="CanMinimize">
-    <Grid Margin="20">
+    <Grid Margin="20" x:Name="passwordgrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50" />
             <ColumnDefinition Width="1.5*" />
@@ -17,15 +17,14 @@
             <ColumnDefinition Width="40" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="70" />
             <RowDefinition Height="50" />
-            <RowDefinition Height="1*" />
+            <RowDefinition Height="50" />
         </Grid.RowDefinitions>
 
         <Label Content="Website" Grid.Column="1" Foreground="White" FontWeight="SemiBold" VerticalAlignment="Bottom" FontSize="30"/>
         <Label Content="Username" Grid.Column="2" Foreground="White" FontWeight="SemiBold" VerticalAlignment="Bottom" FontSize="30"/>
         <Label Content="Password" Grid.Column="3" Foreground="White" FontWeight="SemiBold" VerticalAlignment="Bottom" FontSize="30"/>
-        <Rectangle Fill="Green" Grid.Column="4" Width="40" Height="40" />
+        <Button Background="Green" Grid.Column="4" Height="40" Click="Button_Click"/>
 
         <Rectangle Fill="Blue" Grid.Column="0" Grid.Row="1" />
         <Label Content="Website - websitename.com" Grid.Column="1" Grid.Row="1" Foreground="White" FontSize="25" VerticalAlignment="Center" />
