--- a/PasswordBrowser.xaml
+++ b/PasswordBrowser.xaml
@@ -14,7 +14,7 @@
             <ColumnDefinition Width="1.5*" />
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="40" />
+            <ColumnDefinition Width="50" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
@@ -26,7 +26,7 @@
         <Label Content="Password" Grid.Column="3" Foreground="White" FontWeight="SemiBold" VerticalAlignment="Bottom" FontSize="30"/>
         <Button Background="Green" Grid.Column="4" Height="40" Click="Button_Click"/>
 
-        <Rectangle Fill="Blue" Grid.Column="0" Grid.Row="1" />
+        <Ellipse Fill="Blue" Grid.Column="0" Grid.Row="1" />
         <Label Content="Website - websitename.com" Grid.Column="1" Grid.Row="1" Foreground="White" FontSize="25" VerticalAlignment="Center" />
         <Label Content="Username1" Grid.Column="2" Grid.Row="1" Foreground="White" FontSize="25" VerticalAlignment="Center" />
         <Label Content="********" Grid.Column="3" Grid.Row="1" Foreground="White" FontSize="25" VerticalAlignment="Center" />
